<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="moco.schleppo.SettingsActivity" >

    <PreferenceCategory
        android:title="@string/pref_notifications">
        <CheckBoxPreference
            android:key="pref_key_notifications"
            android:summary="@string/pref_notification_true"
            android:title="@string/pref_notification_text"
            android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_location">
        <CheckBoxPreference
            android:key="pref_key_location"
            android:summary="@string/pref_location_true"
            android:title="@string/pref_location_text"
            android:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>