<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="25dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/standard_email"
        android:id="@+id/textview_email_input"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_height="wrap_content"
        android:id="@+id/email_input_reset_password"
        android:layout_width="250dp" />

    <Button
        android:text="@string/button_profile_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reset_password_btn"
        android:layout_marginTop="20dp" />

    <Button
        android:text="@string/abbrechen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reset_password_cancel_btn" />
</LinearLayout>
