<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"                android:layout_width="match_parent"                android:layout_height="wrap_content">    <TextView        android:text="@string/warndialog"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_alignParentLeft="true"        android:layout_alignParentStart="true"        android:id="@+id/warndialoglayuot_titel"        android:layout_alignParentRight="true"        android:layout_alignParentEnd="true"        android:layout_alignParentTop="true"        android:textAppearance="@style/TextAppearance.AppCompat.Display1"        android:textAlignment="center"        android:textStyle="normal|bold"        android:textColor="@android:color/holo_red_dark"/>    <CheckBox        android:text="@string/ordnungsamt"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="5dp"        android:layout_marginLeft="20dp"        android:layout_marginStart="20dp"        android:layout_below="@+id/warndialoglayuot_titel"        android:layout_alignParentLeft="true"        android:layout_alignParentStart="true"        android:id="@+id/warndialoglayuot_ordnungsamt"        android:layout_alignParentRight="true"        android:layout_alignParentEnd="true"/>    <CheckBox        android:text="@string/abschleppdienst"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="5dp"        android:layout_marginLeft="20dp"        android:layout_marginStart="20dp"        android:layout_below="@+id/warndialoglayuot_ordnungsamt"        android:layout_alignParentLeft="true"        android:layout_alignParentStart="true"        android:id="@+id/warndialoglayuot_abschleppdienst"        android:layout_alignParentRight="true"        android:layout_alignParentEnd="true"/>    <View        android:layout_width="1dp"        android:layout_height="1dp"        android:layout_alignParentBottom="true"        android:layout_centerHorizontal="true"        android:id="@+id/warndialoglayuot_spacer1"/>    <Button        android:text="@string/senden"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_alignTop="@+id/warndialoglayout_abbrechen"        android:layout_toRightOf="@+id/warndialoglayuot_spacer1"        android:layout_toEndOf="@+id/warndialoglayuot_spacer1"        android:id="@+id/warndialoglayuot_senden"        android:layout_alignParentRight="true"        android:layout_alignParentEnd="true"/>    <Button        android:text="@string/abbrechen"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:id="@+id/warndialoglayout_abbrechen"        android:layout_below="@+id/warndialoglayuot_abschleppdienst"        android:layout_alignParentLeft="true"        android:layout_alignParentStart="true"        android:layout_toStartOf="@+id/warndialoglayuot_spacer1"/></RelativeLayout>