<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="moco.schleppo.SignUpActivity" >

    <TextView
        android:text="@string/standard_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/regNameLabelView"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:id="@+id/regNameInputText"
        android:layout_below="@+id/regNameLabelView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/regUsernameInputText"
        android:layout_below="@+id/regUsernameLabelView"
        android:layout_alignLeft="@+id/regSurnameInputText"
        android:layout_alignStart="@+id/regSurnameInputText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/regSurnameInputText"
        android:layout_below="@+id/regLabelSurname"
        android:layout_alignLeft="@+id/regNameInputText"
        android:layout_alignStart="@+id/regNameInputText" />

    <TextView
        android:text="@string/standard_license_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regUsernameInputText"
        android:id="@+id/regLicensePlateLabelView" />

    <TextView
        android:text="@string/standard_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regLicencePlateInputText"
        android:layout_alignRight="@+id/regLabelSurname"
        android:layout_alignEnd="@+id/regLabelSurname"
        android:id="@+id/regMailLabelView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/regMailLabelView"
        android:layout_alignRight="@+id/regLicencePlateInputText"
        android:layout_alignEnd="@+id/regLicencePlateInputText"
        android:id="@+id/editText5" />

    <TextView
        android:text="@string/standard_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/regUsernameLabelView"
        android:layout_below="@+id/regSurnameInputText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/standard_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/regPassword1LabelView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/regPassword1InputText"
        android:layout_below="@+id/regPassword1LabelView"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/regMailInputText"
        android:layout_alignBaseline="@+id/editText5"
        android:layout_alignBottom="@+id/editText5"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/regLicencePlateInputText"
        android:layout_below="@+id/regLicensePlateLabelView"
        android:layout_alignLeft="@+id/regUsernameInputText"
        android:layout_alignStart="@+id/regUsernameInputText" />

    <TextView
        android:text="@string/standard_password_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regPassword1InputText"
        android:id="@+id/regPassword2LabelView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/regPassword2LabelView"
        android:layout_alignRight="@+id/regPassword1InputText"
        android:layout_alignEnd="@+id/regPassword1InputText"
        android:id="@+id/regPassword2InputText" />

    <TextView
        android:text="@string/standard_forename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/regLabelSurname"
        android:layout_below="@+id/regNameInputText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/button_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSignUp_signUp"
        android:layout_below="@+id/regPassword2InputText"
        android:layout_centerHorizontal="true" />

</RelativeLayout>