<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="20dp"
    tools:context="moco.schleppo.LoginActivity">

    <Button
        android:text="@string/button_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSignUp_Login"
        android:layout_alignBaseline="@+id/buttonLogin"
        android:layout_alignBottom="@+id/buttonLogin"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLogin"
        android:layout_marginBottom="81dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/standard_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewPassword"
        android:layout_above="@+id/buttonLogin"
        android:layout_alignRight="@+id/textViewUsername"
        android:layout_alignEnd="@+id/textViewUsername"
        android:layout_marginBottom="111dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:layout_alignTop="@+id/textViewPassword"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/editTextUsername"
        android:layout_above="@+id/editTextPassword"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="36dp" />

    <TextView
        android:text="@string/standard_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewUsername"
        android:layout_above="@+id/editTextUsername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
