<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="moco.schleppo.fragments.ProfilFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/tfName"
            android:layout_alignBaseline="@+id/tvName"
            android:layout_alignBottom="@+id/tvName"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/tfUsername"
            android:layout_alignBaseline="@+id/tvUsername"
            android:layout_alignBottom="@+id/tvUsername"
            android:layout_alignLeft="@+id/tfVorname"
            android:layout_alignStart="@+id/tfVorname" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/tfEmail"
            android:layout_alignBaseline="@+id/tvEmail"
            android:layout_alignBottom="@+id/tvEmail"
            android:layout_alignLeft="@+id/tfKennzeichen"
            android:layout_alignStart="@+id/tfKennzeichen" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/tfKennzeichen"
            android:layout_alignBaseline="@+id/tvKennzeichen"
            android:layout_alignBottom="@+id/tvKennzeichen"
            android:layout_alignLeft="@+id/tfUsername"
            android:layout_alignStart="@+id/tfUsername" />

        <TextView
            android:text="@string/standard_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="53dp"
            android:id="@+id/tvName"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/standard_forename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvVorname"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_below="@+id/tfName"
            android:layout_alignLeft="@+id/tvName"
            android:layout_alignStart="@+id/tvName"
            android:layout_marginTop="35dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/tfVorname"
            android:layout_alignBaseline="@+id/tvVorname"
            android:layout_alignBottom="@+id/tvVorname"
            android:layout_alignLeft="@+id/tfName"
            android:layout_alignStart="@+id/tfName" />

        <TextView
            android:text="@string/standard_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvUsername"
            android:layout_marginTop="35dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_below="@+id/tfVorname"
            android:layout_alignLeft="@+id/tvVorname"
            android:layout_alignStart="@+id/tvVorname" />

        <TextView
            android:text="@string/standard_license_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:id="@+id/tvKennzeichen"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_below="@+id/tfUsername"
            android:layout_alignLeft="@+id/tvUsername"
            android:layout_alignStart="@+id/tvUsername" />

        <TextView
            android:text="@string/standard_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:id="@+id/tvEmail"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_below="@+id/tfKennzeichen"
            android:layout_alignLeft="@+id/tvKennzeichen"
            android:layout_alignStart="@+id/tvKennzeichen" />

        <Button
            android:text="@string/button_profile_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:enabled="true"
            android:id="@+id/btnSpeichern"
            android:layout_above="@+id/btnPasswort"
            android:layout_alignRight="@+id/tfEmail"
            android:layout_alignEnd="@+id/tfEmail"
            android:layout_marginBottom="14dp" />

        <Button
            android:text="@string/button_profile_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:id="@+id/btnPasswort"
            android:layout_marginBottom="14dp"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/tfEmail"
            android:layout_alignEnd="@+id/tfEmail" />
    </RelativeLayout>

</FrameLayout>
